--- a/catalogue/Dockerfile
+++ b/catalogue/Dockerfile
@@ -8,12 +8,13 @@ run npm install
 
 FROM node:20.19-alpine
 WORKDIR /opt/roboshop-catalogue
-USER roboshop
 COPY --from=build /opt/roboshop-catalogue /opt/roboshop-catalogue
 ENV MONGO="true" \
     MONGO_URL="mongodb://mongodb:27017/catalogue"
 RUN chown -R roboshop:roboshop /opt/roboshop-catalogue
-CMD ["node","server.js"]
+USER roboshop
+ENTRYPOINT ["node"]
+CMD ["server.js"]
 
 
 
