--- a/catalogue/Dockerfile
+++ b/catalogue/Dockerfile
@@ -8,10 +8,12 @@ run npm install
 
 FROM node:20.19-alpine
 WORKDIR /opt/roboshop-catalogue
-COPY --from=build /opt/roboshop-catalogue /opt/roboshop-catalogue
+RUN addgroup -S roboshop && adduser -S roboshop -G roboshop && \
+    chown -R roboshop:roboshop /opt/roboshop-catalogue
 ENV MONGO="true" \
     MONGO_URL="mongodb://mongodb:27017/catalogue"
-RUN chown -R roboshop:roboshop /opt/roboshop-catalogue
+COPY --from=build /opt/roboshop-catalogue /opt/roboshop-catalogue
+
 USER roboshop
 ENTRYPOINT ["node"]
 CMD ["server.js"]
