--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,7 +54,7 @@ networks:
   default: 
     driver: bridge
     name: roboshop
-    external: true
+    external: false
 volumes:
   mysql:
   rabbitmq:
