--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,6 +49,9 @@ services:
     container_name: rabbitmq
     volumes:
     - rabbitmq:/var/lib/rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: roboshop
+      RABBITMQ_DEFAULT_PASS: roboshop123
 
 networks:
   default: 
