--- a/user/Dockerfile
+++ b/user/Dockerfile
@@ -1,10 +1,38 @@
-FROM node:20
-EXPOSE 8080
+FROM node:20.19-alpine AS build
 WORKDIR /opt/roboshop-user
-COPY *.js .
 COPY package.json .
-RUN npm install
-ENV MONGO="true" \
-    REDIS_URL='redis://redis:6379' \
-    MONGO_URL="mongodb://mongodb:27017/users"
-CMD ["node","server.js"]
+COPY *.js .
+run npm install
+
+
+
+FROM node:20.19-alpine
+WORKDIR /opt/roboshop-user
+RUN addgroup -S roboshop && adduser -S roboshop -G roboshop && \
+    chown -R roboshop:roboshop /opt/roboshop-user
+EXPOSE 8080
+ENV REDIS_HOST="redis" \
+    USER_HOST="user" \
+    USER_PORT="8080"
+COPY --from=build /opt/roboshop-user /opt/roboshop-user
+
+LABEL com.projects="roboshop" \
+      component="user" \
+      created_by="rajashekar"
+USER roboshop
+ENTRYPOINT ["node"]
+CMD ["server.js"]
+
+
+
+
+# FROM node:20
+# EXPOSE 8080
+# WORKDIR /opt/roboshop-user
+# COPY *.js .
+# COPY package.json .
+# RUN npm install
+# ENV MONGO="true" \
+#     REDIS_URL='redis://redis:6379' \
+#     MONGO_URL="mongodb://mongodb:27017/users"
+# CMD ["node","server.js"]
